--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,6 @@
 .home {
     &-title-root {
-        padding: 40px 0 0 35px;
+        padding: 0 0 0 35px;
     }
 
     &-entries-dropdown {
